# ML-inference-service

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
app/: run.py
app/api/: prediction.py
app/config/: model.py
app/schema/: apartment.py
app/services/: model_inference.py
inference_service/.github/actions/build-application/: action.yml
inference_service/app/config/: .env
src/: runner.py
src/config/: db.py
src/db/: db.sqlite  db_model.py
src/model/: model_service.py
src/model/models/: rf_v1
src/model/pipeline/: collection.py  model.py  preparation.py
