[project]
name = "module2"
version = "0.1.0"
description = ""
authors = [
    {name = "ebrahimtaw",email = "ebrahim.alrafea@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "wemake-python-styleguide (>=1.6.2,<2.0.0)",
    "pipely (>=0.3.0,<0.4.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
